Bug 526703 - Screen readers announce ARIA list items, tree items, and listbox items as 'not selected', r=marcoz